# pysketcher

./: .codeclimate.yml  .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  .pydocstyle  CODE_OF_CONDUCT.md  CONTRIBUTION.md  HISTORY.md  LICENSE  README  README.do.txt  README.md  README.rst  README.sh  codecov.yaml  conftest.py  index.html  noxfile.py  pyproject.toml  setup.py
.TODO/: todo.txt
.circleci/: config.yml
.github/: dependabot.yml  release-drafter.yaml  release-drafter.yml
.github/workflows/: codeql-analysis.yml  coverage.yml  release-drafter.yml  release.yml  test.yml
doc/pub/tutorial/: ._pysketcher000.html  ._pysketcher001.html  ._pysketcher002.html  ._pysketcher003.html  ._pysketcher004.html  ._pysketcher005.html  pysketcher.html
doc/pub/tutorial/fig-tut/: mpl_code_Axis.py  mpl_code_Distance_wText.py  mpl_code_Spring.py  mpl_code_Wavy.py
doc/pub/tutorial/html/: .buildinfo  genindex.html  index.html  main_sketcher.html  objects.inv  search.html  searchindex.js
doc/pub/tutorial/html/_sources/: index.txt  main_sketcher.txt
doc/pub/tutorial/html/html/: index.html  objects.inv
doc/pub/tutorial/mov-tut/pendulum/: movie.flv  movie.webm
doc/src/sketcher/: .ptex2tex.cfg  .ptex2tex.cfg-minted  Shape1a.dot  Shape2.py  basics.do.txt  clean.sh  dictionary.txt  exercises.do.txt  implementation.do.txt  make.sh  make_primer.sh  sketcher.do.txt  wrap_sketcher.do.txt
doc/src/sketcher/figs-sketcher/: Vehicle0_hier2.eps  combine_figures.txt  vehicle0.eps  vehicle0_hier1.eps  vehicle0_hier2.eps
doc/src/sketcher/movies-sketcher/: anim.avi
doc/src/sketcher/src-sketcher/: beam1.py  beam2.py  clean.sh  fd_demo.py  fd_func.py  fdm.py  flow_over_gaussian.py  mesh_function.py  osc1.py  vehicle0.py  vehicle1.py  vehicle2.py
doc/src/sketcher/src-sketcher/test/: res_Arc.py  res_Axis.py  res_Dashpot.py  res_Distance_wText.py  res_Triangle.py  res_mpl.py
doc/src/sketcher/src-sketcher/vehicle0_animation/: anim.html
doc/src/tut/: .dict4spell.txt  Shape1b.dot  basics.do.txt  classes.do.txt  exercises.do.txt  implementation.do.txt  main_sketcher.do.txt  make.sh  newcommands.tex
doc/src/tut/fig-tut/: mpl_code_Arc.py  mpl_code_Dashpot.py  mpl_code_Rectangle.py  mpl_code_Triangle.py  vehicle0_dim.eps  vehicle1.eps  wheel_on_inclined_plane.eps
doc/src/tut/mov-tut/: anim.mpeg  vehicle0.flv  vehicle0.html  vehicle0.webm  vehicle1.html  vehicle1.webm
doc/src/tut/mov-tut/anim.html_vehicle0/: anim.html
doc/src/tut/src-tut/: README.txt  finite_differences.py  pendulum.py  vehicle0.py  vehicle0_dim.py  vehicle0_scaling.py  vehicle1.py  vehicle2.py
doc/src/tut/src-tut/test/: res_Rectangle.py  res_Spring.py
doc/tutorial/html/: search.html
doc/tutorial/html/_sources/: index.txt  wrap_sketcher.txt
doc/tutorial/html/html/: searchindex.js  wrap_sketcher.html
doc/web/: index.html
docs/: conf.py  index.txt  modules.txt  pysketcher.composition.txt  pysketcher.compositions.txt  pysketcher.txt
docs/_build/doctrees/: README.doctree  environment.pickle  index.doctree
docs/_build/doctrees/source/: modules.doctree  pysketcher.doctree
docs/_build/html/: .buildinfo  README.html  c.txt  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  undoc.pickle
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/pysketcher/: arc.html  arrow.html  (+25 more)
docs/_build/html/_sources/: README.md.txt  index.rst.txt
docs/_build/html/_static/: pygments.css
docs/_build/html/source/: modules.html  pysketcher.html
docs/source/: pysketcher.rst
docs/tutorial/: basic_drawing.txt  build_images.py  index.txt  introduction.txt  pendulum.txt
docs/tutorial/examples/: basic_drawing_1.py
docs/tutorial/examples/utils/: __init__.py  change_extension.py
examples/: ForwardEuler.py  ForwardEuler_comic_strip.py  animation.py  beam1.py  beam2.py  colors_test.py  comprehensive_rectangles.py  finite_differences.py  flow_over_gaussian.py  hatch_test.py  hello_world.py  integral.py  integral_comic_strip.py  layered_medium.py  layered_medium_2.py  layered_medium_3xi.py  layered_medium_general.py  mesh_function.py  osc.py  osc1.py  osc2.py  oscillator_sketch1.py  oscillator_sketch2.py  pendulum.py  pendulum1.py  pendulum2.py  run_examples.py  simple_arc.py  simple_arrow.py  simple_axis.py  simple_circle.py  simple_curve.py  simple_line.py  simple_rectangle.py  simple_spline.py  simple_spring.py  simple_text.py  simple_triangle.py  simple_wall.py  staggered_mesh_function.py  (+4 more)
misc/: 2DO  GnuplotDraw.py  TikZDraw.py
pysketcher/: MatplotlibDraw.py  __init__.py  _angle.py  _arc.py  _arrow.py  _arrow_with_text.py  _axis.py  _beam.py  _circle.py  _color.py  _cubic_bezier_curve.py  _curve.py  _dashpot.py  _distance_with_text.py  _drawable.py  _figure.py  _force.py  _line.py  _moment.py  _point.py  _rectangle.py  _shape.py  _simple_support.py  _sketchy_func.py  _spline.py  _spring.py  _style.py  _text.py  _triangle.py  _uniform_load.py  _velocity_profile.py  _wall.py  _warning.py  _wheel.py  angle.py  arc.py  arrow.py  arrow_with_text.py  axis.py  beam.py  (+31 more)
pysketcher/_utils/: __init__.py  doc_enum.py
pysketcher/annotation/: __init__.py  _arc_annotation.py  _line_annotation.py  _text_position.py
pysketcher/backend/: backend.py
pysketcher/backend/matplotlib/: __init__.py  _matplotlib_adapter.py  _matplotlib_backend.py  _matplotlib_composition.py  _matplotlib_curve.py  _matplotlib_style.py  _matplotlib_text.py  matplotlib_adapter.py  matplotlib_backend.py  matplotlib_composition.py  matplotlib_curve.py  matplotlib_style.py  matplotlib_text.py
pysketcher/composition/: __init__.py  _composition.py  composition.py
pysketcher/compositions/: __init__.py  composition.py
pysketcher/dimension/: __init__.py  _angular_dimension.py  _linear_dimension.py  _radial_dimension.py
pysketcher/tests/: clean.sh  test_pysketcher.py
tests/: conftest.py  test_angle.py  test_line.py  test_point.py  test_shape.py  test_style.py
tests/test_compositions/: test_composition.py
tests/utils/: __init__.py  compare_image.py  exceptions.py  given_inferred.py  type_strategy.py
